# video_depth_anything

./: pyproject.toml  run.py
src/video_depth_anything/: video_depth.py
