[project]
name = "video-depth-anything"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "hspk", email = "whxway@whu.edu.cn" }]
requires-python = ">=3.10,<=3.12"
dependencies = [
    "decord>=0.6.0",
    "easydict>=1.13",
    "einops==0.4.1",
    "imageio==2.19.3",
    "imageio-ffmpeg==0.4.7",
    "matplotlib>=3.10.5",
    "numpy==1.23.1",
    "opencv-python>=4.7.0.72",
    "openexr==3.3.1",
    "pillow>=11.3.0",
    "setuptools>=80.9.0",
    "torch==2.1.1",
    "torchvision==0.16.1",
    "tqdm>=4.67.1",
    "xformers==0.0.23",
]

[project.scripts]
video-depth-anything = "video_depth_anything:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
